ErrorProne: AndroidFrameworkEfficientCollections
[AndroidFrameworkEfficientCollections] Consider replacing with
SparseArray for efficiency
+ other variant of the same error for other *Sparse*Array

Bug: 344658662
Test: None
Flag: Exempt refactor
Change-Id: I12853233ce42369ecc1d9200b235bb318a6bdf6f